--- a/Members.html
+++ b/Members.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members</title>
+    <link rel="icon" type = "image/icon" href="img\D2D-icon.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -47,11 +48,19 @@
 </div>
 
 <div class="row">
+  <div class="col-lg-4 col-md-4 col-sm-12">
+    <div class="card bg-dark" style="width: 18rem;color: white;">
+        <a href="https://sammiee3713.github.io/nptd163/naphatadech.html"><img src="img\273673528_1094007601398812_5680265119952433815_n.jpg" class="card-img-top" alt="..."></a>
+        <div class="card-body">
+          <h5 class="card-title">นภธเดช ประเสริฐ ตำแหน่ง : CEO </h5>
+        </div>
+      </div>
+</div>
     <div class="col-lg-4 col-md-4 col-sm-12">
         <div class="card bg-dark" style="width: 18rem;color: white;">
             <a href="https://nithikorn1.github.io/My_Resume/index.html?fbclid=IwAR29U6ip5DoQxx8cE9Nm-89SKZMH4ocL8OE2kTj-eP4fretpuE8W1SxZtf8"><img src="img\WIN_25651215_16_17_27_Pro.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
-              <h5 class="card-title">นิธิกร อินทรโอสถ</h5>
+              <h5 class="card-title">นิธิกร อินทรโอสถ ตำแหน่ง : CTO </h5>
             </div>
           </div>
         </div>
@@ -59,15 +68,7 @@
         <div class="card bg-dark" style="width: 18rem;color: white;">
             <a href="https://weerathana19.github.io/ResumeV1/?fbclid=IwAR1kkZJd9DMw3iqupD4gV9aBNwcFYc1Fn14kXbC_eMdZvznJLegUXf8NEgA"><img src="img\128172437_2740818219566175_5679632063928747436_n.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">วีระธนา แสงภู่วงค์</h5>
-            </div>
-          </div>
-    </div>
-    <div class="col-lg-4 col-md-4 col-sm-12">
-        <div class="card bg-dark" style="width: 18rem;color: white;">
-            <a href="https://sammiee3713.github.io/nptd163/naphatadech.html"><img src="img\273673528_1094007601398812_5680265119952433815_n.jpg" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">นภธเดช ประเสริฐ</h5>
+              <h5 class="card-title">วีระธนา แสงภู่วงค์ ตำแหน่ง : CPO </h5>
             </div>
           </div>
     </div>
@@ -79,7 +80,7 @@
         <div class="card bg-dark" style="width: 18rem;color: white;">
             <a href="https://peerawasboss.github.io/My-Resume/?fbclid=IwAR040dEBwUaUnoOv_mkAdHlYvpJSNq2yILc_b8dusslMEM6PP955micfZ8I#"><img src="img\269906395_4741016475993285_7334436620699122407_n.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">พีรวัส ธิมาทาน</h5>
+              <h5 class="card-title">พีรวัส ธิมาทาน ตำแหน่ง : CMO </h5>
             </div>
           </div>
     </div>
@@ -87,7 +88,7 @@
         <div class="card bg-dark" style="width: 18rem; color: white; ">
             <a href="https://kantaponriwloedphan.github.io/Resume/Resume.html"><img src="img\132800726_2735274290071853_6268767283638351555_n.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">กันตภณ ริ้วเลิศพันธ์</h5>
+              <h5 class="card-title">กันตภณ ริ้วเลิศพันธ์ ตำแหน่ง : GM </h5>
             </div>
           </div>
     </div>
@@ -95,7 +96,7 @@
         <div class="card bg-dark" style="width: 18rem; color: white;">
             <a href="https://sitthisakph.github.io/doo/Resume%20online/Resume%20online/index.html"><img src="img\292064471_1414246609049153_3297750432589097951_n.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">สิทธิศักดิ์ ภพักตร์จันทร์</h5>
+              <h5 class="card-title">สิทธิศักดิ์ ภพักตร์จันทร์ ตำแหน่ง : HR </h5>
             </div>
           </div>
     </div>
