--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="index.html"><strong>D2D T-shirt</strong></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html #section-1">Shop</a>
+                <a class="nav-link" href="index.html">Shop</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Members.html">Team Members</a>
