--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="div-Navbar ">
-    <nav class="navbar navbar-expand-lg fixed-top " style="background-color: white;">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img class="img-icon" src="img\D2D-icon.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +45,13 @@
         </div>
       </nav>
     </div>
+
+  <div class="Download fixed-top">
+   <img src="img\ยีนดีต.png" alt="" width="15%">
+   <div>
+    <button class="btn-shop" style="margin: 15px;"><strong>Download</strong></button>
+   </div>
+  </div>
     <div id="carouselExampleCaptions" class="carousel slide" style="margin-top: 3%;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
