--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type = "image/icon" href="img\D2D-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/13eab37261.css" crossorigin="anonymous">
+   
     
 </head>
 <body>
@@ -46,7 +46,7 @@
       </nav>
     </div>
 
-  <div class="Download fixed-top">
+  <div class="Download fixed-top" style="margin-top: 100px; margin-left: 0px;">
    <img src="img\ยีนดีต.png" alt="" width="15%">
    <div>
     <button class="btn-shop" style="margin: 15px;"><strong>Download</strong></button>
